# JCEP-Spectral-HOM

./: CMakeLists.txt  README.md
lib/dlib-19.24/dlib/matrix/: matrix_mat_abstract.h
lib/dlib-19.24/docs/dlib/matrix/: matrix_mat.h.html  matrix_mat_abstract.h.html
lib/eigen-3.4.0/Eigen/src/Core/: PlainObjectBase.h
lib/qcustomplot/: CMakeLists.txt  qcustomplot.cpp
lib/qcustomplot/documentation/html/: classQCPAbstractLegendItem.html  classQCPItemText.html  classQCPLegend.html  classQCPPlottableLegendItem.html  classQCPPolarLegendItem.html  classQCPTextElement.html  functions_func_s.html  functions_s.html  thelayoutsystem.html
src/: main.cpp
src/fileview/: ClusteredImageView.cpp  DToADistributionView.cpp  FileViewPanel.cpp  FileViewer.cpp  Hist2DView.cpp  LinePlotView.cpp  RawImageView.cpp  SpatialCorrelationView.cpp  StartStopHistogramView.cpp  ToTDistributionView.cpp  fileview.h
src/tpx3/: LinePair.cpp  LoadRawFileThread.cpp  PixelData.cpp  Tpx3Image.cpp  tpx3.h
src/ui/: AppActions.cpp  BgThread.cpp  FileImportProgressBar.cpp  FileInputPanel.cpp  FileInputSettingsPanel.cpp  LogPanel.cpp  MainWindow.cpp  SetImageMaskDialog.cpp  log.h  threadutils.h  ui.h
utility/: gen_calibration.py
